[package]
name = "openlst-driver"
version = "0.1.0"
edition = "2024"

[features]
defmt = [ "dep:defmt" ]
std = []

[dependencies]
heapless = { version = "0.9", default-features = false }
defmt = { version = "1.0", optional = true }

embedded-io-async = { version = "0.7.0" }

[profile.release]
debug = 2
