[package]
name = "radio-ground"
version = "0.1.0"
edition = "2024"
authors = [ "Eliseo Cailloux" ]

[features]
default = [ "primary" ]

primary = []
secondary = []

[dependencies]
embassy-stm32 = { version = "0.6.0", features = [ "defmt", "time", "time-driver-any", "stm32h723vg", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }
embassy-futures = { version = "0.1.2" }
embassy-net = { version = "0.9.0", features = ["tcp", "udp", "dhcpv4", "defmt", "medium-ethernet", "proto-ipv6", "dns"] }

defmt = { version = "1.0", features = ["alloc"] }
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
static_cell = { version = "2.1.1", features = ["nightly"] }

embedded-io-async = "0.7.0"

south-common = { features = ["ground"], git = "https://github.com/S2outh/south-common.git" }

openlst-driver = { features = ["defmt"], branch = "dev", git = "https://github.com/S2outh/RocketLST-software.git" }

embassy-nats = { git = "https://github.com/S2outh/embassy-nats.git" }

emballoc = "0.3.0"
paste = "1.0.15"

erased-serde = { version = "0.4.10", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
minicbor-serde = { version = "0.6.2", features = ["alloc"] }

[profile.release]
debug = 2
