[package]
name = "tmtc-lst-ground"
version = "0.1.0"
edition = "2024"
authors = [ "Eliseo Cailloux" ]

[dependencies]

embassy-stm32 = { version = "0.5.0", features = [ "defmt", "time", "time-driver-any", "stm32h723vg", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }
embassy-futures = { version = "0.1.2" }
embassy-net = { version = "0.8.0", features = ["tcp", "dhcpv4", "defmt", "medium-ethernet", "proto-ipv6", "dns"] }

defmt = { version = "1.0", features = ["alloc"] }
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
heapless = { version = "0.9", default-features = false }
static_cell = { version = "2.1.1", features = ["nightly"] }

embedded-io-async = "0.7.0"

south-common = { git = "https://github.com/S2outh/south-common.git", features = ["ground"] }

openlst-driver = { git = "https://github.com/S2outh/RocketLST-software.git", features = ["defmt"] }

emballoc = "0.3.0"
paste = "1.0.15"

serde = { version = "1.0.228", default-features = false, features = ["alloc"] }
minicbor-serde = { version = "0.6.2", features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[profile.release]
debug = 2
